botones con id, nombre y +strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,10 @@
 
     <string name="dummy_button">Comenzar</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name="title_activity_prueba">prueba</string>
-
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="Mayor">Mayor</string>
+    <string name="Menor">Menor</string>
+    <string name="Seleccione_numero_personas">Seleccione el número de personas</string>
+    <string name="Continuar">Continuar</string>
 </resources>
